# ai4good25-wildfire

./: .gitignore  README.md  TO_REDUCE.txt  quicktest.md  requirements-prithvi.txt  requirements-priv.txt  requirements-priv_new.txt  requirements-transformers.txt  requirements.txt  requirements_prithvi.txt  results.txt  test_model.py  verify_sweep_configs.py
.venv-prithvi/: pyvenv.cfg
cfgs/: README.md  convlstm_guillermo_v1_config.yaml  convlstm_guillermo_v2_config.yaml  data_multitemporal_full_features_doys.yaml  data_multitemporal_prithvi_600.yaml  trainer_original_paper.yaml  trainer_single_gpu.yaml  trainer_test_short.yaml  trainer_v2_test_short.yaml
docs/: prithvi_variants.md
gfx/: ConvLSTM_Guillermo_v1_Guide.md  ConvLSTM_Guillermo_v2_Guide.md
scripts/: predict.py
src/: calculate_standard_deviations.py  train.py
tmp/: list_models.py  tmp06gw17x6.json  tmp0s7ka9f3.json  tmp1yq_iuty.json  tmp255qffh2.json  tmp2ndmf5ow.json  tmp2tnkqk54.json  tmp30h5_sj3.json  tmp35ph3okh.json  tmp4r7zbajt.json  tmp4zjyuotm.json  tmp7e6q61jk.json  tmp7ghj52mq.json  tmp7x63rjer.json  tmp83rx_jrk.json  tmp88ratt8d.json  tmp8degmvpe.json  tmp8lt_rccb.json  tmp8otynaar.json  tmp8z2p5jqu.json  tmp98dzhxoi.json  tmp9s_d51xr.json  tmp_h2s4qj0.json  tmp_ndkxmzs.json  tmp_txk2ju_.json  tmpc0d18_g9.json  tmpc94rue49.json  tmpcoildx7f.json  tmpd4f5g2r9.json  tmpd4wnm1e5.json  tmpe0jora6s.json  tmpe2so77z5.json  tmpejhzlxx8.json  tmpezj6jxne.json  tmpf63qx1xs.json  (+32 more)
videos/: .gitignore  pyproject.toml
videos/scripts/: make_fire_timeline_images.py  make_fire_videos.py  predict.py
(+86 files in other folders)
