[project]
name = "videos"
version = "0.1.0"
description = ""
authors = [
    {name = "André Glatzl",email = "andreglatzl@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "h5py (>=3.15.1,<4.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "pandas (>=2.3.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
